# bot_carga_solar

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: .env.exemplo  main.py
tests/: __init__.py
